--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -11,10 +11,10 @@
    <header>
       <nav>
         <ul>
-          <li><a href="index.html" title="Home">Home</a></li>
-          <li><a href="about.html" title="About">About</a></li>
-          <li><a href="gallery.html" title="Gallery">Gallery</a></li>
-          <li><a href="contact.html" title="Contact">Contact</a></li>
+          <li><a href="/index" title="Home">Home</a></li>
+          <li><a href="/about" title="About">About</a></li>
+          <li><a href="/gallery" title="Gallery">Gallery</a></li>
+          <li><a href="/contact" title="Contact">Contact</a></li>
         </ul>
       </nav>
       <div id="banner"></div>
