--- a/client/views/about.ejs
+++ b/client/views/about.ejs
@@ -21,6 +21,7 @@
     </header>
     <main>
       <h1>Main section</h1>
+      <p><%= count %> people are afraid of this show<p>
       <p>Sample main content text.</p>
     </main>
     <aside>
