--- a/client/views/contact.ejs
+++ b/client/views/contact.ejs
@@ -10,12 +10,15 @@
    <div id="wrapper">
    <header>
       <nav>
+        <%- include('../views/navbar.ejs') %>
+      <!--
         <ul>
           <li><a href="/index" title="Home">Home</a></li>
           <li><a href="/about" title="About">About</a></li>
           <li><a href="/gallery" title="Gallery">Gallery</a></li>
           <li><a href="/contact" title="Contact">Contact</a></li>
         </ul>
+      -->
       </nav>
       <div id="banner"></div>
     </header>
