--- a/client/views/about.ejs
+++ b/client/views/about.ejs
@@ -4,7 +4,8 @@
      <meta charset="UTF-8">
      <title>DMS 321 First Homework</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link href="style.css" rel="stylesheet">
+     <!--<link href="style.css" rel="stylesheet">-->
+     <%- include('header.ejs') %>
    </head>
    <body>
    <div id="wrapper">
@@ -24,7 +25,7 @@
     </header>
     <main>
       <h1>Main section</h1>
-      <p><%= count %> people are afraid of this show<p>
+      <p>People are afraid of this show<p>
       <p>Sample main content text.</p>
     </main>
     <aside>
