--- a/client/static/style.css
+++ b/client/static/style.css
@@ -36,7 +36,7 @@ h3 {
 }
 header {
    width: 100%;
-   background-color: #000;
+   background-color: #fff;
 }
 nav {
    padding-top: 3px;
@@ -60,11 +60,12 @@ nav li a:hover {
    text-decoration: underline;
    font-weight: normal;
 }
+
 #banner {
    width: 100%;
    height: 50px;
    clear: both;
-   background-image: url(images/banner.png);
+   /*background-image: url(images/banner.png);*/
    background-repeat: no-repeat;
    background-size: cover;
 }
