--- a/client/views/gallery.ejs
+++ b/client/views/gallery.ejs
@@ -4,7 +4,8 @@
      <meta charset="UTF-8">
      <title>DMS 321 First Homework</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link href="style.css" rel="stylesheet">
+     <!--<link href="style.css" rel="stylesheet">-->
+     <%- include('header.ejs') %>
    </head>
    <body>
    <div id="wrapper">
