--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -4,7 +4,8 @@
      <meta charset="UTF-8">
      <title>DMS 321 First Homework</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link href="style.css" rel="stylesheet">
+     <!--<link href="style.css" rel="stylesheet">  not needed because of header.ejs-->
+     <%- include('header.ejs') %>
    </head>
    <body>
    <div id="wrapper">
@@ -24,7 +25,7 @@
     </header>
     <main>
       <h1>Main section</h1>
-      <p>Welcome, <%nomen%></p>
+      <p>Welcome to the homepage, <%=data.username%></p>
     </main>
     <aside>
       <h2>Sub-section</h2>
