Tutorial 4 In Progress

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -11,7 +11,7 @@
    <div id="wrapper">
    <header>
       <nav>
-        <%- include('../views/navbar.ejs') %>
+        <%- include('navbar.ejs') %>
         <!--
         <ul>
           <li><a href="/index" title="Home">Home</a></li>
