--- a/client/views/navbar.ejs
+++ b/client/views/navbar.ejs
@@ -3,6 +3,7 @@
     <a href="/about">About</a> &diam;
     <a href="/gallery">Gallery</a> &diam;
     <a href="/contact">Contact</a> &diam;
+    <a href="/blog/">Blog</a> &diam;
     <span id="navwelcome"></span>
 </div>
 
