--- a/client/static/style.css
+++ b/client/static/style.css
@@ -81,6 +81,24 @@ aside {
    margin-top: 50px;
 }
 
+
+#navbar {
+  background-color: aquamarine;
+  position:  absolute;
+  top: 1px;
+  right: 1px;
+  padding: 2px;
+}
+#mainpanel {
+  position: absolute;
+  top: 20px;
+  right: 20%;
+  left: 20%;
+}
+form {
+  margin: 0px;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 580px) {
