--- a/client/static/style.css
+++ b/client/static/style.css
@@ -69,7 +69,13 @@ nav li a:hover {
    background-repeat: no-repeat;
    background-size: cover;
 }
-main {
+#sort1 {
+   width: 100%;
+   margin-right: 5%;
+   float: left;
+   margin-top: 50px;
+}
+#sort2 {
    width: 60%;
    margin-right: 5%;
    float: left;
