--- a/client/views/blog.ejs
+++ b/client/views/blog.ejs
@@ -4,22 +4,21 @@
     <%- include('header.ejs') %>
   </head>
   <body>
-    <div id="wrapper">
     <header>
-       <nav></nav>
        <div id="banner"></div>
     </header>
-    <main>
-    <h1>So you have come to learn more about anime</h1>
-    <a href="write/">Write a post</a>
-    <table>
-    <% postset.forEach(function(bpost) { %>
-    <%- include('blogpostpreview', {post: bpost}) %>
-    <%=bpost.title%>
-    <% }) %>
-    </table>
-    <%- include('navbar.ejs') %>
-    </main>
-    </div>
+      <div id="mainpanel">
+        <main id="sort1">
+        <h1>So you have come to learn more about anime</h1>
+        <a href="write/">Write a post</a>
+        <table>
+        <% postset.forEach(function(bpost) { %>
+        <%- include('blogpostpreview', {post: bpost}) %>
+        <%=bpost.title%>
+        <% }) %>
+        </table>
+        <%- include('navbar.ejs') %>
+        </main>
+      </div>
   </body>
 </html>
