--- a/client/views/blogpostpreview.ejs
+++ b/client/views/blogpostpreview.ejs
@@ -1,1 +1,8 @@
-<%= post.title %>
+<tr>
+<td><%= post.title %></td>
+<td><%= post.created_at %></td>
+</tr>
+
+<tr>
+  <td colspan ="2"><%= post.body %></td>
+</tr>
