--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -8,22 +8,11 @@
      <%- include('header.ejs') %>
    </head>
    <body>
-   <div id="wrapper">
    <header>
-      <nav>
-        <%- include('navbar.ejs') %>
-        <!--
-        <ul>
-          <li><a href="/index" title="Home">Home</a></li>
-          <li><a href="/about" title="About">About</a></li>
-          <li><a href="/gallery" title="Gallery">Gallery</a></li>
-          <li><a href="/contact" title="Contact">Contact</a></li>
-        </ul>
-      -->
-      </nav>
       <div id="banner"></div>
     </header>
-    <main>
+    <div id="mainpanel">
+    <main id="sort2">
       <h1>Main section</h1>
       <p>Welcome to the homepage, <%=data.username%></p>
     </main>
@@ -31,6 +20,7 @@
       <h2>Sub-section</h2>
       <p>Sample sidebar text.</p>
     </aside>
+    <%- include('navbar.ejs') %>
    </div> <!-- close wrapper -->
    </body>
 </html>
