--- a/client/views/writing.ejs
+++ b/client/views/writing.ejs
@@ -4,14 +4,19 @@
     <%- include('header.ejs') %>
   </head>
   <body>
+    <header>
+       <div id="banner"></div>
+    </header>
     <div id="mainpanel">
+    <main id="sort1">
     <h1>Tell the people about anime:</h1><br/>
     <form action="/blog/writepost" method="POST">
       <input name="title" type="text" value="TITLE"></input><br/>
       <textarea name="entrytext" style="width: 100%; height: 500px"></textarea><br/>
       <button type="submit">Post!</button>
     </form>
-    </div>
     <%- include('navbar.ejs') %>
+    </main>
+    </div>
   </body>
 </html>
