--- a/client/views/writing.ejs
+++ b/client/views/writing.ejs
@@ -12,7 +12,7 @@
     <h1>Tell the people about anime:</h1><br/>
     <form action="/blog/writepost" method="POST">
       <input name="title" type="text" value="TITLE"></input><br/>
-      <textarea name="entrytext" style="width: 100%; height: 500px"></textarea><br/>
+      <textarea name="body" style="width: 100%; height: 500px"></textarea><br/>
       <button type="submit">Post!</button>
     </form>
     <%- include('navbar.ejs') %>
