--- a/client/views/navbar.ejs
+++ b/client/views/navbar.ejs
@@ -1,5 +1,5 @@
 <div id="navbar">
-    <a href="/index">Home</a> &diam;
+    <a href="/">Home</a> &diam;
     <a href="/about">About</a> &diam;
     <a href="/gallery">Gallery</a> &diam;
     <a href="/contact">Contact</a> &diam;
