--- a/client/views/blogpostpreview.ejs
+++ b/client/views/blogpostpreview.ejs
@@ -1,8 +1,4 @@
 <tr>
-<td><%= post.title %></td>
+<td><a href="<%= post._id %>/"><%= post.title %></a></td>
 <td><%= post.created_at %></td>
-</tr>
-
-<tr>
-  <td colspan ="2"><%= post.body %></td>
 </tr>
