--- a/client/views/writing.ejs
+++ b/client/views/writing.ejs
@@ -10,13 +10,33 @@
     <div id="mainpanel">
     <main id="sort1">
     <h1>Tell the people about anime:</h1><br/>
+
+    <% if(draft._id) { %>
+    <form action="/blog/<%=draft._id%>/edit" method="POST">
+    <% } else { %>
     <form action="/blog/writepost" method="POST">
-      <input name="title" type="text" value="TITLE"></input><br/>
-      <textarea name="body" style="width: 100%; height: 500px"></textarea><br/>
+    <% } %>
+
+      <input id="title" name="title" type="text"><br/>
+
+      <textarea name="body" style="width: 100%; height: 500px"><%if(draft){%><%= draft.body %><% } %></textarea><br/>
+
+      <% if(draft.title) { %>
+      <button type="submit">Update!</button>
+      <% } else { %>
       <button type="submit">Post!</button>
+      <% } %>
     </form>
     <%- include('navbar.ejs') %>
     </main>
     </div>
+
+    <script>
+    var title = "<%= draft.title %>";
+
+    $(()=>{
+      if(title!="") $('#title').val(title);
+    });
+    </script>
   </body>
 </html>
